--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <script src="https://mempool.space/mempool.js"></script>
-    <script src="https://unpkg.com/nostr-tools/lib/nostr.bundle.js"></script>
+    <script src="https://unpkg.com/nostr-tools@1.14.0/lib/nostr.bundle.js"></script>
     <script src="./bolt11.min.js"></script>
     <title>NostrAssets</title>
   </head>
