--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" class="notranslate" translate="no">
-  <head>
-    <meta name="google" content="notranslate" />
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
 
-    <meta name="description" content="" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <script src="https://mempool.space/mempool.js"></script>
-    <!-- <script src="https://unpkg.com/nostr-tools@1.14.0/lib/nostr.bundle.js"></script> -->
-    <script src="./bolt11.min.js"></script>
-    <title>NostrAssets</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+<head>
+  <meta name="google" content="notranslate" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <meta name="description" content="" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <script src="https://mempool.space/mempool.js"></script>
+  <!-- <script src="https://unpkg.com/nostr-tools@1.14.0/lib/nostr.bundle.js"></script> -->
+  <script src="./bolt11.min.js"></script>
+  <!--  <script src="./tiny.js"></script> -->
+  <title>NostrAssets</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
       You can add webfonts, meta tags, or analytics to this file.
@@ -26,5 +26,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
