--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <script src="https://mempool.space/mempool.js" defer></script>
   <!-- <script src="https://unpkg.com/nostr-tools@1.14.0/lib/nostr.bundle.js"></script> -->
-  <script src="./bolt11.min.js" defer></script>
+  <script src="./bolt11.min.js"></script>
   <!--  <script src="./tiny.js"></script> -->
   <title>NostrAssets</title>
 </head>
